tests/dependancies/bad/private_fun/main.rs
mod module;


fn main() {
    module::exec()
}